--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
@@ -36,24 +36,12 @@
     "            ress.append(dict(list(inf.items())))\n",
     "\n"
    ],
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "not enough arguments for format string",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/g9/__yhhv7d0xx59_jssnmpjhwh0000gn/T/ipykernel_78039/3199727272.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mgenre\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mpage\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         \u001b[0murl\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'https://movies.yahoo.com.tw/moviegenre_result.html?genre_id=%s&page=%s'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mgenre\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mpage\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m         \u001b[0;31m#print(url)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: not enough arguments for format string"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 48,
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -67,33 +55,27 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "                                                   中文名稱  \\\n",
-       "0                                            小小兵2：格魯的崛起   \n",
-       "1                                                   蝙蝠俠   \n",
-       "2                                                   魔比斯   \n",
-       "3                                              捍衛戰士：獨行俠   \n",
-       "4                                              魔鬼剋星：未來世   \n",
-       "...                                                 ...   \n",
-       "1262  劇場版 假面騎士ZERO-ONE REAL×TIME+劇場短篇 假面騎士聖刃 不死鳥的劍士與...   \n",
-       "1263                                                讀報人   \n",
-       "1264                                              沉默的證人   \n",
-       "1265                                           狄仁傑之四大天王   \n",
-       "1266                                               追擊者.   \n",
-       "\n",
-       "                                       英文名稱        上映日期  \n",
-       "0                 Minions: The Rise of Guru  2022-07-01  \n",
-       "1                                The Batman  2022-03-04  \n",
-       "2                                   Morbius  2022-01-16  \n",
-       "3                         Top Gun: Maverick  2021-11-19  \n",
-       "4                   Ghostbusters: Afterlife  2021-11-11  \n",
-       "...                                     ...         ...  \n",
-       "1262                                                 未定  \n",
-       "1263                      News of the World          未定  \n",
-       "1264                         Bodies At Rest          未定  \n",
-       "1265  Detective Dee The Four Heavenly Kings          未定  \n",
-       "1266                                 Chaser          未定  \n",
-       "\n",
-       "[1267 rows x 3 columns]"
+       "          中文名稱                                       英文名稱        上映日期\n",
+       "0   小小兵2：格魯的崛起                  Minions: The Rise of Guru  2022-07-01\n",
+       "1          蝙蝠俠                                 The Batman  2022-03-04\n",
+       "2          魔比斯                                    Morbius  2022-01-16\n",
+       "3     捍衛戰士：獨行俠                          Top Gun: Maverick  2021-11-19\n",
+       "4     魔鬼剋星：未來世                    Ghostbusters: Afterlife  2021-11-11\n",
+       "5           沙丘                                       Dune  2021-10-14\n",
+       "6      007生死交戰                             No Time to Die  2021-10-01\n",
+       "7      猛毒2：血蜘蛛                Venom: Let There Be Carnage  2021-09-16\n",
+       "8      尚氣與十環傳奇  Shang-Chi and the Legend of the Ten Rings  2021-09-03\n",
+       "9         疾凍救援                               The Ice Road  2021-08-25\n",
+       "10       殺手保鑣2              The Hitman's Wife's Bodyguard  2021-08-25\n",
+       "11  密弒遊戲2：勝者危亡       Escape Room: Tournament of Champions  2021-08-20\n",
+       "12   特種部隊：蛇眼之戰                                 Snake Eyes  2021-08-18\n",
+       "13        脫稿玩家                   Original title: Free Guy  2021-08-12\n",
+       "14       玩命關頭9                           Fast & Furious 9  2021-08-11\n",
+       "15    自殺突擊隊：集結                          The Suicide Squad  2021-08-05\n",
+       "16          除暴                             Caught In Time  2021-07-30\n",
+       "17        叢林奇航                              Jungle Cruise  2021-07-30\n",
+       "18       宇宙特攻隊                                  Cosmoball  2021-07-22\n",
+       "19         黑寡婦                                Black Widow  2021-07-14"
       ],
       "text/html": [
        "<div>\n",
@@ -151,49 +133,102 @@
        "      <td>2021-11-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>5</th>\n",
+       "      <td>沙丘</td>\n",
+       "      <td>Dune</td>\n",
+       "      <td>2021-10-14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1262</th>\n",
-       "      <td>劇場版 假面騎士ZERO-ONE REAL×TIME+劇場短篇 假面騎士聖刃 不死鳥的劍士與...</td>\n",
-       "      <td></td>\n",
-       "      <td>未定</td>\n",
+       "      <th>6</th>\n",
+       "      <td>007生死交戰</td>\n",
+       "      <td>No Time to Die</td>\n",
+       "      <td>2021-10-01</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1263</th>\n",
-       "      <td>讀報人</td>\n",
-       "      <td>News of the World</td>\n",
-       "      <td>未定</td>\n",
+       "      <th>7</th>\n",
+       "      <td>猛毒2：血蜘蛛</td>\n",
+       "      <td>Venom: Let There Be Carnage</td>\n",
+       "      <td>2021-09-16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1264</th>\n",
-       "      <td>沉默的證人</td>\n",
-       "      <td>Bodies At Rest</td>\n",
-       "      <td>未定</td>\n",
+       "      <th>8</th>\n",
+       "      <td>尚氣與十環傳奇</td>\n",
+       "      <td>Shang-Chi and the Legend of the Ten Rings</td>\n",
+       "      <td>2021-09-03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1265</th>\n",
-       "      <td>狄仁傑之四大天王</td>\n",
-       "      <td>Detective Dee The Four Heavenly Kings</td>\n",
-       "      <td>未定</td>\n",
+       "      <th>9</th>\n",
+       "      <td>疾凍救援</td>\n",
+       "      <td>The Ice Road</td>\n",
+       "      <td>2021-08-25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1266</th>\n",
-       "      <td>追擊者.</td>\n",
-       "      <td>Chaser</td>\n",
-       "      <td>未定</td>\n",
+       "      <th>10</th>\n",
+       "      <td>殺手保鑣2</td>\n",
+       "      <td>The Hitman's Wife's Bodyguard</td>\n",
+       "      <td>2021-08-25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>密弒遊戲2：勝者危亡</td>\n",
+       "      <td>Escape Room: Tournament of Champions</td>\n",
+       "      <td>2021-08-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>特種部隊：蛇眼之戰</td>\n",
+       "      <td>Snake Eyes</td>\n",
+       "      <td>2021-08-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>脫稿玩家</td>\n",
+       "      <td>Original title: Free Guy</td>\n",
+       "      <td>2021-08-12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>玩命關頭9</td>\n",
+       "      <td>Fast &amp; Furious 9</td>\n",
+       "      <td>2021-08-11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>自殺突擊隊：集結</td>\n",
+       "      <td>The Suicide Squad</td>\n",
+       "      <td>2021-08-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>除暴</td>\n",
+       "      <td>Caught In Time</td>\n",
+       "      <td>2021-07-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>叢林奇航</td>\n",
+       "      <td>Jungle Cruise</td>\n",
+       "      <td>2021-07-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>宇宙特攻隊</td>\n",
+       "      <td>Cosmoball</td>\n",
+       "      <td>2021-07-22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>黑寡婦</td>\n",
+       "      <td>Black Widow</td>\n",
+       "      <td>2021-07-14</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1267 rows × 3 columns</p>\n",
        "</div>"
       ]
      },
      "metadata": {},
-     "execution_count": 43
+     "execution_count": 48
     }
    ],
    "metadata": {}
