--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -2,46 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 89,
    "source": [
-    "import requests\n",
-    "from bs4 import BeautifulSoup\n",
-    "\n",
-    "res = []\n",
-    "ress = []\n",
-    "for genre in range(1, 2):\n",
-    "    for page in range(1,3):\n",
-    "        url = 'https://movies.yahoo.com.tw/moviegenre_result.html?genre_id={}&page={}'.format(genre,page)\n",
-    "        #print(url)\n",
-    "        r = requests.get(url)\n",
-    "        soup = BeautifulSoup(r.text)\n",
-    "\n",
-    "        infos = []\n",
-    "        imgs = []\n",
-    "        for d in soup.find_all('div', class_=\"release_info\"):\n",
-    "            info = {}\n",
-    "            info['中文名稱'] = d.find('div', class_='release_movie_name').find('a', class_='gabtn').text.strip()\n",
-    "            info['英文名稱'] = d.find('div', class_='release_movie_name').find('div', class_='en').a.text.strip()\n",
-    "            info['上映日期'] = d.find('div', class_='release_movie_time').text.split('上映日期 ： ')[1]\n",
-    "            infos.append(info)\n",
-    "            \n",
-    "        for d in soup.find_all('div', class_='release_foto'):\n",
-    "            img = {}\n",
-    "            img['封面照片網址'] = d.find('img')['src']\n",
-    "            imgs.append(img)\n",
-    "\n",
-    "        #for i, j in list(zip(infos, imgs)):\n",
-    "            #res.append(dict(list(i.items()) + list(j.items())))\n",
-    "        for inf in list(infos):\n",
-    "            ress.append(dict(list(inf.items())))\n",
-    "\n"
+    "def ckeck_exist(info,ress):\n",
+    "    for item in ress:\n",
+    "        if info in item['中文名稱']:\n",
+    "            return 0"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 90,
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "ress = []\n",
+    "for genre in range(1, 6):\n",
+    "    for page in range(1,6):\n",
+    "        url = 'https://movies.yahoo.com.tw/moviegenre_result.html?genre_id={}&page={}'.format(genre,page)\n",
+    "        #print(url)\n",
+    "        r = requests.get(url)\n",
+    "        soup = BeautifulSoup(r.text)\n",
+    "\n",
+    "        infos = []\n",
+    "        for d in soup.find_all('div', class_=\"release_info\"):\n",
+    "            info = {}\n",
+    "            info['中文名稱'] = d.find('div', class_='release_movie_name').find('a', class_='gabtn').text.strip()\n",
+    "            info['英文名稱'] = d.find('div', class_='release_movie_name').find('div', class_='en').a.text.strip()\n",
+    "            info['上映日期'] = d.find('div', class_='release_movie_time').text.split('上映日期 ： ')[1]\n",
+    "\n",
+    "            tf = ckeck_exist(info['中文名稱'],ress)\n",
+    "            if tf == 0:\n",
+    "                continue\n",
+    "\n",
+    "            infos.append(info)\n",
+    "\n",
+    "        for inf in list(infos):\n",
+    "            ress.append(dict(list(inf.items())))\n"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -55,27 +62,20 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "          中文名稱                                       英文名稱        上映日期\n",
-       "0   小小兵2：格魯的崛起                  Minions: The Rise of Guru  2022-07-01\n",
-       "1          蝙蝠俠                                 The Batman  2022-03-04\n",
-       "2          魔比斯                                    Morbius  2022-01-16\n",
-       "3     捍衛戰士：獨行俠                          Top Gun: Maverick  2021-11-19\n",
-       "4     魔鬼剋星：未來世                    Ghostbusters: Afterlife  2021-11-11\n",
-       "5           沙丘                                       Dune  2021-10-14\n",
-       "6      007生死交戰                             No Time to Die  2021-10-01\n",
-       "7      猛毒2：血蜘蛛                Venom: Let There Be Carnage  2021-09-16\n",
-       "8      尚氣與十環傳奇  Shang-Chi and the Legend of the Ten Rings  2021-09-03\n",
-       "9         疾凍救援                               The Ice Road  2021-08-25\n",
-       "10       殺手保鑣2              The Hitman's Wife's Bodyguard  2021-08-25\n",
-       "11  密弒遊戲2：勝者危亡       Escape Room: Tournament of Champions  2021-08-20\n",
-       "12   特種部隊：蛇眼之戰                                 Snake Eyes  2021-08-18\n",
-       "13        脫稿玩家                   Original title: Free Guy  2021-08-12\n",
-       "14       玩命關頭9                           Fast & Furious 9  2021-08-11\n",
-       "15    自殺突擊隊：集結                          The Suicide Squad  2021-08-05\n",
-       "16          除暴                             Caught In Time  2021-07-30\n",
-       "17        叢林奇航                              Jungle Cruise  2021-07-30\n",
-       "18       宇宙特攻隊                                  Cosmoball  2021-07-22\n",
-       "19         黑寡婦                                Black Widow  2021-07-14"
+       "           中文名稱                       英文名稱        上映日期\n",
+       "0    小小兵2：格魯的崛起  Minions: The Rise of Guru  2022-07-01\n",
+       "1           蝙蝠俠                 The Batman  2022-03-04\n",
+       "2           魔比斯                    Morbius  2022-01-16\n",
+       "3      捍衛戰士：獨行俠          Top Gun: Maverick  2021-11-19\n",
+       "4      魔鬼剋星：未來世    Ghostbusters: Afterlife  2021-11-11\n",
+       "..          ...                        ...         ...\n",
+       "192       如果雨之後           Waiting For Rain  2021-05-07\n",
+       "193          操控      Every Breath You Take  2021-05-07\n",
+       "194     人生檔案求刪除             Delete History  2021-05-07\n",
+       "195       布吉闖籃關                     Boogie  2021-05-07\n",
+       "196       永遠的我們                  Supernova  2021-05-07\n",
+       "\n",
+       "[197 rows x 3 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -133,102 +133,49 @@
        "      <td>2021-11-11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>沙丘</td>\n",
-       "      <td>Dune</td>\n",
-       "      <td>2021-10-14</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>007生死交戰</td>\n",
-       "      <td>No Time to Die</td>\n",
-       "      <td>2021-10-01</td>\n",
+       "      <th>192</th>\n",
+       "      <td>如果雨之後</td>\n",
+       "      <td>Waiting For Rain</td>\n",
+       "      <td>2021-05-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>猛毒2：血蜘蛛</td>\n",
-       "      <td>Venom: Let There Be Carnage</td>\n",
-       "      <td>2021-09-16</td>\n",
+       "      <th>193</th>\n",
+       "      <td>操控</td>\n",
+       "      <td>Every Breath You Take</td>\n",
+       "      <td>2021-05-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>尚氣與十環傳奇</td>\n",
-       "      <td>Shang-Chi and the Legend of the Ten Rings</td>\n",
-       "      <td>2021-09-03</td>\n",
+       "      <th>194</th>\n",
+       "      <td>人生檔案求刪除</td>\n",
+       "      <td>Delete History</td>\n",
+       "      <td>2021-05-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>疾凍救援</td>\n",
-       "      <td>The Ice Road</td>\n",
-       "      <td>2021-08-25</td>\n",
+       "      <th>195</th>\n",
+       "      <td>布吉闖籃關</td>\n",
+       "      <td>Boogie</td>\n",
+       "      <td>2021-05-07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>殺手保鑣2</td>\n",
-       "      <td>The Hitman's Wife's Bodyguard</td>\n",
-       "      <td>2021-08-25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>密弒遊戲2：勝者危亡</td>\n",
-       "      <td>Escape Room: Tournament of Champions</td>\n",
-       "      <td>2021-08-20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>特種部隊：蛇眼之戰</td>\n",
-       "      <td>Snake Eyes</td>\n",
-       "      <td>2021-08-18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>脫稿玩家</td>\n",
-       "      <td>Original title: Free Guy</td>\n",
-       "      <td>2021-08-12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>玩命關頭9</td>\n",
-       "      <td>Fast &amp; Furious 9</td>\n",
-       "      <td>2021-08-11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>自殺突擊隊：集結</td>\n",
-       "      <td>The Suicide Squad</td>\n",
-       "      <td>2021-08-05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>除暴</td>\n",
-       "      <td>Caught In Time</td>\n",
-       "      <td>2021-07-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>叢林奇航</td>\n",
-       "      <td>Jungle Cruise</td>\n",
-       "      <td>2021-07-30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>宇宙特攻隊</td>\n",
-       "      <td>Cosmoball</td>\n",
-       "      <td>2021-07-22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>黑寡婦</td>\n",
-       "      <td>Black Widow</td>\n",
-       "      <td>2021-07-14</td>\n",
+       "      <th>196</th>\n",
+       "      <td>永遠的我們</td>\n",
+       "      <td>Supernova</td>\n",
+       "      <td>2021-05-07</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>197 rows × 3 columns</p>\n",
        "</div>"
       ]
      },
      "metadata": {},
-     "execution_count": 48
+     "execution_count": 91
     }
    ],
    "metadata": {}
