--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -14,11 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 109,
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
-    "\n",
+    "import re\n",
     "ress = []\n",
     "for genre in range(1, 2):\n",
     "    for page in range(1,3):\n",
@@ -34,6 +34,7 @@
     "            info['英文名稱'] = d.find('div', class_='release_movie_name').find('div', class_='en').a.text.strip()\n",
     "            info['上映日期'] = d.find('div', class_='release_movie_time').text.split('上映日期 ： ')[1]\n",
     "            info['劇情介紹'] = d.find('div', class_='release_text').text.strip()\n",
+    "            info['劇情介紹'] = re.sub('\\s+','', info['劇情介紹'])\n",
     "\n",
     "            tf = ckeck_exist(info['中文名稱'],ress)\n",
     "            if tf == 0:\n",
@@ -49,10 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 110,
    "source": [
     "import pandas as pd\n",
-    "\n",
     "df = pd.DataFrame(ress)\n",
     "df.to_csv('movies.csv', encoding='utf_8_sig')\n",
     "\n",
@@ -88,23 +88,23 @@
        "                                                 劇情介紹  \n",
        "0   今年暑假，影史最賣座的動畫電影系列之一和風靡全球的現象，即將帶來關於一個12歲小男孩的故事，...  \n",
        "1   《蝙蝠俠》將聚焦於一個年輕版本的布魯斯韋恩，並從中檢視他在面罩之下的靈魂。羅伯派汀森將在新版...  \n",
-       "2   ★索尼與漫威繼《猛毒》後再一野心暗黑爭議之作 \\r\\n★《蜘蛛人》宇宙正式成立 全新神秘反派...  \n",
+       "2   ★索尼與漫威繼《猛毒》後再一野心暗黑爭議之作★《蜘蛛人》宇宙正式成立全新神秘反派吸血鬼「魔比...  \n",
        "3   派拉蒙影業1986年推出的《捍衛戰士》，由湯姆克魯斯主演，是一齣以航空母艦與美國海軍戰鬥機武...  \n",
-       "4   ★抓鬼始祖回歸！《魔鬼剋星 未來世》2020年夏天重磅登場\\r\\n★《蟻人》保羅路德攜《怪奇...  \n",
+       "4   ★抓鬼始祖回歸！《魔鬼剋星未來世》2020年夏天重磅登場★《蟻人》保羅路德攜《怪奇物與》天才...  \n",
        "5   《沙丘》講述一個神祕又性格強烈的英雄之心路歷程，本片講述保羅亞崔迪的故事，他是一個聰明又富有...  \n",
        "6   一向被視為年度大片的007系列電影即將推出第25部，丹尼爾克雷格再度飾演所向披靡，家喻戶曉的...  \n",
-       "7   2018年《猛毒》推出後全球累積票房就突破8.5億，創下該年度全球票房第 7 名的佳績。睽違...  \n",
+       "7   2018年《猛毒》推出後全球累積票房就突破8.5億，創下該年度全球票房第7名的佳績。睽違三年...  \n",
        "8   漫威電影宇宙再度擴張，全新動作英雄《尚氣與十環傳奇》正式登場，故事敘述尚氣（劉思慕飾演）自幼...  \n",
-       "9   ★ 今年暑假超級災難動作強檔！\\r\\n★《即刻救援》億萬巨星連恩尼遜年度鉅獻！\\r\\n★ 耗...  \n",
-       "10  ★ 億萬票房《殺手保鑣》系列續集，暑假必看!\\r\\n★影史最強三\"賤\"客，原班人馬霸氣回歸，...  \n",
+       "9   ★今年暑假超級災難動作強檔！★《即刻救援》億萬巨星連恩尼遜年度鉅獻！★耗資4000萬美金拍攝...  \n",
+       "10  ★億萬票房《殺手保鑣》系列續集，暑假必看!★影史最強三\"賤\"客，原班人馬霸氣回歸，戰力全開「...  \n",
        "11  為了將害人致死的「世界頂尖密室逃脫」主辦方繩之以法，兩位遊戲生存者柔伊（泰勒羅素飾）和班（羅...  \n",
        "12  《特種部隊：蛇眼之戰》一片由亨利高汀領銜主演蛇眼，一個充滿決心毅力的獨行俠，在拯救了一個古老...  \n",
-       "13  《脫稿玩家》 故事描述一個銀行小職員 - 蓋伊 (萊恩雷諾斯) 日復一日年復一年做著無聊的工...  \n",
+       "13  《脫稿玩家》故事描述一個銀行小職員-蓋伊(萊恩雷諾斯)日復一日年復一年做著無聊的工作，過著樸...  \n",
        "14  馮迪索飾演的唐老大和莉蒂與他的兒子小布萊恩，正在過著與世隔絕的平靜生活，但是他們都知道這種平...  \n",
        "15  歡迎來到地獄—全美死亡率最高的「美夢監獄」。那裡關押著最兇惡的超級反派，他們為了逃離該處願意...  \n",
-       "16  ★ 超級硬派警匪決戰，6年內犯下破萬件搶案的最強悍匪與刑警強力對決\\r\\n★ 金獎影帝吳彥祖...  \n",
-       "17  故事描述一位名叫霍頓博士（艾蜜莉布朗 飾演）發現了深藏在亞馬遜裡，有著一顆擁有治癒神力的奇幻...  \n",
-       "18  ★俄羅斯影史最強特效場景\\r\\n★《馴龍高手》《變形金剛》億萬動畫團隊再造顛峰\\r\\n★網友...  \n",
+       "16  ★超級硬派警匪決戰，6年內犯下破萬件搶案的最強悍匪與刑警強力對決★金獎影帝吳彥祖與王千源突破...  \n",
+       "17  故事描述一位名叫霍頓博士（艾蜜莉布朗飾演）發現了深藏在亞馬遜裡，有著一顆擁有治癒神力的奇幻之...  \n",
+       "18  ★俄羅斯影史最強特效場景★《馴龍高手》《變形金剛》億萬動畫團隊再造顛峰★網友狂讚！媲美《艾莉...  \n",
        "19  漫威影業2020年的首部重頭戲，是粉絲請求多時，終於實現的《黑寡婦》個人電影，黑寡婦在漫威電...  "
       ],
       "text/html": [
@@ -152,7 +152,7 @@
        "      <td>魔比斯</td>\n",
        "      <td>Morbius</td>\n",
        "      <td>2022-01-16</td>\n",
-       "      <td>★索尼與漫威繼《猛毒》後再一野心暗黑爭議之作 \\r\\n★《蜘蛛人》宇宙正式成立 全新神秘反派...</td>\n",
+       "      <td>★索尼與漫威繼《猛毒》後再一野心暗黑爭議之作★《蜘蛛人》宇宙正式成立全新神秘反派吸血鬼「魔比...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -166,7 +166,7 @@
        "      <td>魔鬼剋星：未來世</td>\n",
        "      <td>Ghostbusters: Afterlife</td>\n",
        "      <td>2021-11-11</td>\n",
-       "      <td>★抓鬼始祖回歸！《魔鬼剋星 未來世》2020年夏天重磅登場\\r\\n★《蟻人》保羅路德攜《怪奇...</td>\n",
+       "      <td>★抓鬼始祖回歸！《魔鬼剋星未來世》2020年夏天重磅登場★《蟻人》保羅路德攜《怪奇物與》天才...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -187,7 +187,7 @@
        "      <td>猛毒2：血蜘蛛</td>\n",
        "      <td>Venom: Let There Be Carnage</td>\n",
        "      <td>2021-09-16</td>\n",
-       "      <td>2018年《猛毒》推出後全球累積票房就突破8.5億，創下該年度全球票房第 7 名的佳績。睽違...</td>\n",
+       "      <td>2018年《猛毒》推出後全球累積票房就突破8.5億，創下該年度全球票房第7名的佳績。睽違三年...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -201,14 +201,14 @@
        "      <td>疾凍救援</td>\n",
        "      <td>The Ice Road</td>\n",
        "      <td>2021-08-25</td>\n",
-       "      <td>★ 今年暑假超級災難動作強檔！\\r\\n★《即刻救援》億萬巨星連恩尼遜年度鉅獻！\\r\\n★ 耗...</td>\n",
+       "      <td>★今年暑假超級災難動作強檔！★《即刻救援》億萬巨星連恩尼遜年度鉅獻！★耗資4000萬美金拍攝...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>殺手保鑣2</td>\n",
        "      <td>The Hitman's Wife's Bodyguard</td>\n",
        "      <td>2021-08-25</td>\n",
-       "      <td>★ 億萬票房《殺手保鑣》系列續集，暑假必看!\\r\\n★影史最強三\"賤\"客，原班人馬霸氣回歸，...</td>\n",
+       "      <td>★億萬票房《殺手保鑣》系列續集，暑假必看!★影史最強三\"賤\"客，原班人馬霸氣回歸，戰力全開「...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -229,7 +229,7 @@
        "      <td>脫稿玩家</td>\n",
        "      <td>Original title: Free Guy</td>\n",
        "      <td>2021-08-12</td>\n",
-       "      <td>《脫稿玩家》 故事描述一個銀行小職員 - 蓋伊 (萊恩雷諾斯) 日復一日年復一年做著無聊的工...</td>\n",
+       "      <td>《脫稿玩家》故事描述一個銀行小職員-蓋伊(萊恩雷諾斯)日復一日年復一年做著無聊的工作，過著樸...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -250,21 +250,21 @@
        "      <td>除暴</td>\n",
        "      <td>Caught In Time</td>\n",
        "      <td>2021-07-30</td>\n",
-       "      <td>★ 超級硬派警匪決戰，6年內犯下破萬件搶案的最強悍匪與刑警強力對決\\r\\n★ 金獎影帝吳彥祖...</td>\n",
+       "      <td>★超級硬派警匪決戰，6年內犯下破萬件搶案的最強悍匪與刑警強力對決★金獎影帝吳彥祖與王千源突破...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>叢林奇航</td>\n",
        "      <td>Jungle Cruise</td>\n",
        "      <td>2021-07-30</td>\n",
-       "      <td>故事描述一位名叫霍頓博士（艾蜜莉布朗 飾演）發現了深藏在亞馬遜裡，有著一顆擁有治癒神力的奇幻...</td>\n",
+       "      <td>故事描述一位名叫霍頓博士（艾蜜莉布朗飾演）發現了深藏在亞馬遜裡，有著一顆擁有治癒神力的奇幻之...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>宇宙特攻隊</td>\n",
        "      <td>Cosmoball</td>\n",
        "      <td>2021-07-22</td>\n",
-       "      <td>★俄羅斯影史最強特效場景\\r\\n★《馴龍高手》《變形金剛》億萬動畫團隊再造顛峰\\r\\n★網友...</td>\n",
+       "      <td>★俄羅斯影史最強特效場景★《馴龍高手》《變形金剛》億萬動畫團隊再造顛峰★網友狂讚！媲美《艾莉...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
@@ -279,7 +279,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 93
+     "execution_count": 110
     }
    ],
    "metadata": {}
